# vulkano-proto

./: .gitignore  .gitlab-ci.yml  .npmrc  .releaserc.json  CMakeLists.txt  Makefile  README.md  index.ts  package-lock.json  package.json  requirements.txt  setup.py  tsconfig.json
proto/inference/pipeline/: audiofilters.proto  pipeline.proto  videofilters.proto
proto/inference/providers/: providers.proto
proto/pipeline/: audiofilters.proto  pipeline.proto  videofilters.proto
scripts/: gen_exports.sh  gen_py.sh  gen_ts.sh  gen_ts_nest.sh  generate.sh
